--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,6 +4,8 @@
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
+    <link rel="shortcut icon" href="../favicon.ico"/>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
@@ -12,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
@@ -26,6 +29,7 @@
           <li><a href="#">Login</a></li>
           <li><a href="#">Signup</a></li>
           <li><a href="/workouts">My Journal</a></li>
+          <li><a href="/workouts/new">Log New PR</a></li>
         </ul>
       </div>
     </nav>
@@ -38,5 +42,58 @@
       <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
       <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
     <![endif]-->
+
+    <%# <footer class="page-footer teal accent-4">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Resources</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="https://www.finder.com/gyms">Compare Top Gyms</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        Copyright © 2021
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer> %>
+
+
   </body>
+
+<footer class="page-footer teal accent-4">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Resources</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="https://www.finder.com/gyms">Compare Top Gyms</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://rippedbody.com/the-big-3-routine/">The Big 3 Workout</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        Copyright © 2021
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
 </html>
