--- a/app/views/workouts/index.erb
+++ b/app/views/workouts/index.erb
@@ -24,7 +24,7 @@
   </tbody>
 </table>
 <br>
-<a href="/workouts/new" class="btn-small">Add New PR</a>
+<a href="/workouts/new" class="btn">Add New PR</a>
 <br>
 <br>
 <img src="images/deadlift.jpg" class="circle">
