Added logged in and logged out view scenarios

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,10 +26,14 @@
       <div class="nav-wrapper container">
         <a href="/" class="brand-logo">Workout PR Journal</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Signup</a></li>
-          <li><a href="/workouts">My Journal</a></li>
-          <li><a href="/workouts/new">Log New PR</a></li>
+          <% if !logged_in? %>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/signup">Create Account</a></li>
+          <% else %>
+            <li><a href="/workouts">My Journal</a></li>
+            <li><a href="/workouts/new">Log New PR</a></li>
+            <li><a href="/logout">Logout</a></li>
+          <% end %>
         </ul>
       </div>
     </nav>
@@ -42,34 +46,6 @@
       <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
       <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
     <![endif]-->
-
-    <%# <footer class="page-footer teal accent-4">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Resources</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="https://www.finder.com/gyms">Compare Top Gyms</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-        Copyright © 2021
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-        </div>
-      </div>
-    </footer> %>
-
-
   </body>
 
 <footer class="page-footer teal accent-4">
