--- a/app/views/workouts/edit.erb
+++ b/app/views/workouts/edit.erb
@@ -26,9 +26,10 @@
     <label for="date">Date</label>
   </div>
 
-  <input type="submit" value="Log PR" class="btn teal accent-4">
+  <input type="submit" value="Update PR" class="btn teal accent-4">
 
 </form>
+<br>
 
 <script>
     $(document).ready(function(){
