--- a/app/views/workouts/index.erb
+++ b/app/views/workouts/index.erb
@@ -1,5 +1,5 @@
 <br>
-<h4 class="teal-text accent-4">Your PR Journal</h4>
+<h4 class="teal-text accent-4"><%= @user.first_name %> <%= @user.last_name %>'s PR Journal</h4>
 <br>
 
 <p>Recently Viewed: <%= @workout? @workout.name : "Haven't viewed any workouts." %></p>
@@ -9,18 +9,31 @@
     <tr>
         <th>Exercise</th>
         <th>Personal Record</th>
+        <th>Date</th>
         <th></th>
     </tr>
   </thead>
 
   <tbody>
+
+
+  <% if !@workouts.empty? %>
     <% @workouts.each do |workout| %>
       <tr>
         <td><%= workout.name%></td>
         <td><%= workout.personal_record%> lbs</td>
+        <td><%= workout.date%></td>
         <td><a href="/workouts/<%= workout.id %>" class="btn-small">View</a></td>
       </tr>
     <% end %>
+  <% else %>
+    <td>You have no PRs logged yet!</td>
+    <td></td>
+    <td></td>
+  <% end %>
+
+
+
   </tbody>
 </table>
 <br>
