--- a/app/views/workouts/new.erb
+++ b/app/views/workouts/new.erb
@@ -1,5 +1,5 @@
 <br>
-<h4 class="teal-text accent-4">Record New Workout</h4>
+<h4 class="teal-text accent-4">Record New PR</h4>
 <br>
 
 <form action="/workouts" method="post">
@@ -31,6 +31,7 @@
 
 </form>
 <br>
+<img src="images/deadlift.jpg" class="circle">
 
 
 <script>
