Added homepage content

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,1 +1,59 @@
-<h1>Workout PR Journal</h1>
+<div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="images/banner3.jpg"> <!-- random image -->
+        <div class="caption center-align">
+          <h2>Track Your Fitness Journey</h2>
+          <h5 class="light grey-text text-lighten-3">And All Your PRs.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="images/banner2.jpg"> <!-- random image -->
+        <div class="caption left-align">
+          <h2>Vizualize Your Progress</h2>
+          <h5 class="light grey-text text-lighten-3">With Our Digital Journal.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="images/banner4.jpg"> <!-- random image -->
+        <div class="caption right-align">
+          <h2>Reach Your Goals</h2>
+          <h5 class="light grey-text text-lighten-3">Over and Over Again.</h5>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <br>
+
+  <center>
+    <div class="row">
+      <div class="col s4">
+          <img src="images/statistics.png" class="center">
+          <br>
+          <h5 class="teal-text accent-4">Makes PRs Visible</h5>
+          <p style="margin: 20px 30px 30px 40px;">We've made it easier to reach your goals by offering a place to record your PR milestones, making your progress more tangible. Logging your achievements is the key to mindful and deliberate success.<p>
+      </div>
+      <div class="col s4">
+        <img src="images/weight.png" class="center">
+        <br>
+        <h5 class="teal-text accent-4">Lorem Ipsum</h5>
+        <p style="margin: 20px 30px 30px 40px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at hendrerit est. Donec auctor ornare nisl, vel elementum mauris porttitor sit amet. In hac habitasse platea dictumst.</p>
+      </div>
+      <div class="col s4">
+        <img src="images/settings.png" class="center">
+        <br>
+        <h5 class="teal-text accent-4">Easy to Use</h5>
+        <p style="margin: 20px 30px 30px 40px;">By utilizing simple UI design, we were able to create a framework that focuses on User Experience. Navigating the site is easy and straightforward, and you can stay focused on your PR goals.</p>
+      </div>
+
+    </div>
+  </center>
+  <br>
+
+  <script>
+      $(document).ready(function(){
+      $('.slider').slider();
+    });
+
+  </script>
+      
