--- a/app/views/workouts/index.erb
+++ b/app/views/workouts/index.erb
@@ -37,9 +37,10 @@
   </tbody>
 </table>
 <br>
-<a href="/workouts/new" class="btn">Add New PR</a>
+<a href="/workouts/new" class="btn-large ">Add New PR</a>
 <br>
 <br>
 <img src="images/deadlift.jpg" class="circle">
+<br>
 
 
