--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,7 +23,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   </head>
-  <body>
+  
+  <body style="display:flex; min-height: 100vh; flex-direction: column;">
     <nav class="teal accent-4">
       <div class="nav-wrapper container">
         <a href="/" class="brand-logo"><i class="material-icons right">fitness_center</i>PR Journal</a>
@@ -48,7 +49,7 @@
       <% end %>
     </div>
         
-    <div class="container">
+    <div class="container" style="flex: 1 0 auto;">
       <%= yield %>
     </div>
             
@@ -56,17 +57,16 @@
       <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
       <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
     <![endif]-->
-  </body>
-
-<footer class="page-footer teal accent-4">
+  
+    <footer class="page-footer teal accent-4">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
             <h5 class="white-text">PR Journal</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#">About Us</a></li>
-              <li><a class="grey-text text-lighten-3" href="#">Contacts</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Terms & Conditions</a></li>
+              <li><a class="grey-text text-lighten-3" href="/about-us">About Us</a></li>
+              <li><a class="grey-text text-lighten-3" href="/contacts">Contacts</a></li>
+              <li><a class="grey-text text-lighten-3" href="/terms">Terms & Conditions</a></li>
             </ul>
           </div>
           <div class="col l4 offset-l2 s12">
@@ -74,7 +74,7 @@
             <ul>
               <li><a class="grey-text text-lighten-3" href="https://www.finder.com/gyms"><i class="material-icons left">compare</i>Compare Top Gyms</a></li>
               <li><a class="grey-text text-lighten-3" href="https://rippedbody.com/the-big-3-routine/"><i class="material-icons left">stars</i>The Big 3 Workout</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!"><i class="material-icons left">exit_to_app</i>Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://www.youtube.com/"><i class="material-icons left">play_arrow</i>YouTube</a></li>
             </ul>
           </div>
         </div>
@@ -86,4 +86,7 @@
         </div>
       </div>
     </footer>
+  </body>
+
+
 </html>
