--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -11,7 +11,7 @@
         <img src="images/banner2.jpg"> <!-- random image -->
         <div class="caption left-align">
           <h2>Vizualize Your Progress</h2>
-          <h5 class="light grey-text text-lighten-3">With Our Digital Journal.</h5>
+          <h5 class="light grey-text text-lighten-3">With Your Digital Journal.</h5>
         </div>
       </li>
       <li>
@@ -36,8 +36,8 @@
       <div class="col s4">
         <img src="images/weight.png" class="center">
         <br>
-        <h5 class="teal-text accent-4">Lorem Ipsum</h5>
-        <p style="margin: 20px 30px 30px 40px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at hendrerit est. Donec auctor ornare nisl, vel elementum mauris porttitor sit amet. In hac habitasse platea dictumst.</p>
+        <h5 class="teal-text accent-4">Uplifting Community</h5>
+        <p style="margin: 20px 30px 30px 40px;">Although the PR Journal Application does not yet support community forums and interaction yet, the long-term goal is to provide a place where users can motivate one another, no matter where they are in their PR journey.</p>
       </div>
       <div class="col s4">
         <img src="images/settings.png" class="center">
