--- a/app/views/workouts/new.erb
+++ b/app/views/workouts/new.erb
@@ -10,7 +10,9 @@
         <option value="Deadlift">Deadlift</option>
         <option value="Overhead Press">Overhead Press</option>
         <option value="Bench Press">Bench Press</option>
-        <option value="Squat">Squat</option>
+        <option value="High Bar Squat">High Bar Squat</option>
+        <option value="Low Bar Squat">Low Bar Squat</option>
+        <option value="Front Squat">Front Squat</option>
         <option value="Clean and Press">Clean and Press</option>
         <option value="Hang Clean">Hang Clean</option>
         <option value="Snatch Lift">Snatch Lift</option>
