edited static pages and favicon

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
     <link rel="shortcut icon" href="../favicon.ico"/>
+    <link rel="icon" href="/images/favicon.ico?" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -65,7 +66,7 @@
             <h5 class="white-text">PR Journal</h5>
             <ul>
               <li><a class="grey-text text-lighten-3" href="/about-us">About Us</a></li>
-              <li><a class="grey-text text-lighten-3" href="/contacts">Contacts</a></li>
+              <li><a class="grey-text text-lighten-3" href="/contacts">Contact Me</a></li>
               <li><a class="grey-text text-lighten-3" href="/terms">Terms & Conditions</a></li>
             </ul>
           </div>
