--- a/app/views/static-pages/terms.erb
+++ b/app/views/static-pages/terms.erb
@@ -1,14 +1,32 @@
 <h4 class="teal-text text-accent-4">Terms & Conditions</h4>
 <p style="margin-right: 100px;">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consequat interdum varius sit amet. Risus ultricies tristique nulla aliquet enim tortor at auctor urna. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Enim nunc faucibus a pellentesque sit amet. Bibendum neque egestas congue quisque egestas diam in arcu cursus. In nulla posuere sollicitudin aliquam ultrices sagittis. At quis risus sed vulputate odio ut enim blandit. Lacinia at quis risus sed vulputate odio ut enim blandit. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Feugiat pretium nibh ipsum consequat nisl vel. Amet consectetur adipiscing elit ut aliquam purus sit amet luctus. Enim diam vulputate ut pharetra. Lorem donec massa sapien faucibus et molestie ac. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem. Vivamus arcu felis bibendum ut tristique. Aliquam ut porttitor leo a diam sollicitudin tempor id eu.
+Last updated January 08, 2021
+<br>
+<h6>AGREEMENT TO TERMS</h6>
+<br>
+These Terms of Use constitute a legally binding agreement made between you, whether personally or on behalf of an entity (“you”) and PR Journal, concerning your access to and use of the https://pr-journal.herokuapp.com/ website. You agree that by accessing the Site, you have read, understood, and agreed to be bound by all of these Terms of Use.
 <br>
 <br>
-Commodo sed egestas egestas fringilla phasellus. Id faucibus nisl tincidunt eget nullam non nisi. Diam volutpat commodo sed egestas egestas. Diam sit amet nisl suscipit adipiscing bibendum. Viverra orci sagittis eu volutpat. Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Proin fermentum leo vel orci porta non. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus. Felis eget nunc lobortis mattis aliquam. Lorem donec massa sapien faucibus et molestie ac feugiat sed. Justo laoreet sit amet cursus sit amet dictum. Varius quam quisque id diam vel quam elementum pulvinar etiam. Aliquam eleifend mi in nulla posuere sollicitudin aliquam.
+Supplemental terms and conditions or documents that may be posted on the Site from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Terms of Use at any time and for any reason. We will alert you about any changes by updating the “Last updated” date of these Terms of Use, and you waive any right to receive specific notice of each such change. It is your responsibility to periodically review these Terms of Use to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Terms of Use by your continued use of the Site after the date such revised Terms of Use are posted.
 <br>
 <br>
-Id interdum velit laoreet id donec ultrices. Interdum consectetur libero id faucibus nisl. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Ac tortor dignissim convallis aenean et tortor at risus viverra. Aliquam malesuada bibendum arcu vitae elementum curabitur. Odio ut enim blandit volutpat maecenas volutpat blandit. Ac turpis egestas integer eget aliquet nibh praesent. Bibendum at varius vel pharetra vel turpis. Ut tellus elementum sagittis vitae et leo duis ut diam. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices eros. Vestibulum lorem sed risus ultricies tristique nulla. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Quis auctor elit sed vulputate mi sit amet mauris. Venenatis cras sed felis eget velit aliquet sagittis. A condimentum vitae sapien pellentesque habitant morbi tristique senectus.
+The information provided on the Site is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country. Accordingly, those persons who choose to access the Site from other locations do so on their own initiative and are solely responsible for compliance with local laws, if and to the extent local laws are applicable.
 <br>
 <br>
-Nunc mattis enim ut tellus elementum sagittis vitae et leo. Quam elementum pulvinar etiam non quam lacus suspendisse faucibus. Velit aliquet sagittis id consectetur. Magna ac placerat vestibulum lectus mauris ultrices eros. Ut diam quam nulla porttitor massa id. Consequat semper viverra nam libero justo laoreet sit amet. Leo a diam sollicitudin tempor id. Ut lectus arcu bibendum at varius vel pharetra. Suscipit adipiscing bibendum est ultricies integer quis. Enim sit amet venenatis urna cursus eget nunc scelerisque viverra.
+<h6>INTELLECTUAL PROPERTY RIGHTS</h6>
+<br>
+Unless otherwise indicated, the Site is our proprietary property and all source code, databases, functionality, software, website designs, audio, video, text, photographs, and graphics on the Site (collectively, the “Content”) and the trademarks, service marks, and logos contained therein (the “Marks”) are owned or controlled by us or licensed to us, and are protected by copyright and trademark laws and various other intellectual property rights and unfair competition laws of the United States, international copyright laws, and international conventions. The Content and the Marks are provided on the Site “AS IS” for your information and personal use only. Except as expressly provided in these Terms of Use, no part of the Site and no Content or Marks may be copied, reproduced, aggregated, republished, uploaded, posted, publicly displayed, encoded, translated, transmitted, distributed, sold, licensed, or otherwise exploited for any commercial purpose whatsoever, without our express prior written permission.
+<br>
+<br>
+Provided that you are eligible to use the Site, you are granted a limited license to access and use the Site and to download or print a copy of any portion of the Content to which you have properly gained access solely for your personal, non-commercial use. We reserve all rights not expressly granted to you in and to the Site, the Content and the Marks.
+<br>
+<br>
+<h6>USER REPRESENTATIONS</h6>
+<br>
+By using the Site, you represent and warrant that: (1) all registration information you submit will be true, accurate, current, and complete; (2) you will maintain the accuracy of such information and promptly update such registration information as necessary; (3) you have the legal capacity and you agree to comply with these Terms of Use; (4) you are not a minor in the jurisdiction in which you reside, or if a minor, you have received parental permission to use the Site; (5) you will not access the Site through automated or non-human means, whether through a bot, script, or otherwise; (6) you will not use the Site for any illegal or unauthorized purpose; and (7) your use of the Site will not violate any applicable law or regulation.
+<br>
+<br>
+If you provide any information that is untrue, inaccurate, not current, or incomplete, we have the right to suspend or terminate your account and refuse any and all current or future use of the Site (or any portion thereof).
+<br>
+<br>
 </p>
-<br>
