added (lbs) to display

--- a/app/views/workouts/edit.erb
+++ b/app/views/workouts/edit.erb
@@ -19,7 +19,7 @@
   </div>
   <div class="input-field">
     <input id="personal_record" name="workout[personal_record]" type="text" class="validate" value="<%= @workout.personal_record %>">
-    <label for="personal_record">Personal Record</label>
+    <label for="personal_record">Personal Record (lbs)</label>
   </div>
   <div class="input-field">
     <input id="date" name="workout[date]" type="text" class="datepicker" value="<%= @workout.date %>">
