--- a/app/views/workouts/show.erb
+++ b/app/views/workouts/show.erb
@@ -14,7 +14,7 @@
   <tbody>
     <tr>
       <td><%= @workout.name %></td>
-      <td><%= @workout.personal_record %></td>
+      <td><%= @workout.personal_record %> lbs</td>
       <td><%= @workout.date %></td>
       <td>
         <form action="/workouts/<%= @workout.id %>" method="post">
