--- a/app/views/workouts/index.erb
+++ b/app/views/workouts/index.erb
@@ -1,5 +1,5 @@
 <br>
-<h4 class="teal-text accent-4"><%= @user.first_name %> <%= @user.last_name %>'s PR Journal</h4>
+<h4 class="teal-text accent-4"><%= current_user.first_name %> <%= current_user.last_name %>'s PR Journal</h4>
 <br>
 
 <p>Recently Viewed: <%= @workout? @workout.name : "Haven't viewed any workouts." %></p>
